--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
 # Salut, c'est Jasmine
 
-Template by [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) - I write about JavaScript and React there!
+Je suis une étudiante en fin de DEC en Techniques D'intégration Multimédia! Je suis à la recherche d'un stage en programmation Web ou Unity!
